Update css, templates for Zen version 7.x-6.4
- New html.tpl.php format
- New css selector for footer
 - (#footer -> .footer)

--- a/css/layouts/responsive.css
+++ b/css/layouts/responsive.css
@@ -27,7 +27,7 @@
 #navigation,
 .region-sidebar-first,
 .region-sidebar-second,
-#footer {
+.footer {
   padding-left: 10px;
   padding-right: 10px;
   -moz-box-sizing: border-box;
@@ -44,7 +44,7 @@
 /* Containers for grid items and flow items. */
 #header,
 #main,
-#footer {
+.footer {
   *position: relative;
   *zoom: 1;
 }
@@ -52,14 +52,14 @@
 #header:after,
 #main:before,
 #main:after,
-#footer:before,
-#footer:after {
+.footer:before,
+.footer:after {
   content: "";
   display: table;
 }
 #header:after,
 #main:after,
-#footer:after {
+.footer:after {
   clear: both;
 }
 
